# FinWizard_dll

./: .gitattributes  .gitignore  CMakeLists.txt
.qtcreator/: CMakeLists.txt.user.89ce043  CMakeLists.txt.user.93e36de
installer/inno/: setup.iss
installer/python_sdk/: finwizard_sdk.py
installer/win_python/Lib/: _ast_unparse.py  _collections_abc.py  _colorize.py  _markupbase.py  _opcode_metadata.py  _py_warnings.py  _pydatetime.py  _pydecimal.py  _pyio.py  _pylong.py  _strptime.py  _weakrefset.py  annotationlib.py  argparse.py  ast.py  base64.py  bdb.py  bz2.py  cProfile.py  calendar.py  cmd.py  code.py  codecs.py  codeop.py  compileall.py  configparser.py  contextvars.py  copy.py  copyreg.py  csv.py  dataclasses.py  datetime.py  decimal.py  difflib.py  dis.py  doctest.py  enum.py  fnmatch.py  fractions.py  ftplib.py  (+71 more)
installer/win_python/Lib/_pyrepl/: _module_completer.py  commands.py  completing_reader.py  keymap.py  main.py  mypy.ini  reader.py  readline.py  simple_interact.py  terminfo.py  trace.py  unix_console.py  unix_eventqueue.py  utils.py  windows_console.py
installer/win_python/Lib/asyncio/: __init__.py  __main__.py  base_events.py  base_subprocess.py  coroutines.py  events.py  futures.py  graph.py  locks.py  proactor_events.py  queues.py  runners.py  selector_events.py  staggered.py  streams.py  taskgroups.py  tasks.py  threads.py  timeouts.py  tools.py  unix_events.py  windows_events.py  windows_utils.py
installer/win_python/Lib/collections/: __init__.py
installer/win_python/Lib/compression/: bz2.py  gzip.py  lzma.py  zlib.py
installer/win_python/Lib/compression/_common/: _streams.py
installer/win_python/Lib/compression/zstd/: __init__.py  _zstdfile.py
installer/win_python/Lib/concurrent/futures/: __init__.py  _base.py  interpreter.py  process.py  thread.py
installer/win_python/Lib/concurrent/interpreters/: __init__.py  _crossinterp.py  _queues.py
installer/win_python/Lib/ctypes/: __init__.py  _layout.py  util.py  wintypes.py
installer/win_python/Lib/curses/: __init__.py  textpad.py
installer/win_python/Lib/email/: __init__.py  _header_value_parser.py  _parseaddr.py  _policybase.py  base64mime.py  charset.py  encoders.py  errors.py  feedparser.py  generator.py  header.py  iterators.py  message.py  parser.py  policy.py  quoprimime.py  utils.py
installer/win_python/Lib/email/mime/: application.py  audio.py  base.py  image.py  message.py  multipart.py  nonmultipart.py  text.py
installer/win_python/Lib/encodings/: __init__.py  _win_cp_codecs.py  aliases.py
installer/win_python/Lib/ensurepip/: __init__.py
installer/win_python/Lib/html/: parser.py
installer/win_python/Lib/http/: __init__.py  client.py  cookiejar.py  cookies.py  server.py
installer/win_python/Lib/idlelib/: CREDITS.txt  HISTORY.txt  NEWS2x.txt  News3.txt  colorizer.py  config-main.def  configdialog.py  debugger.py  editor.py  help.html  help.py  iomenu.py  pyshell.py  query.py
installer/win_python/Lib/idlelib/idle_test/: __init__.py  htest.py  test_colorizer.py  test_configdialog.py  test_debugger.py  test_grep.py  test_multicall.py  test_outwin.py  test_query.py  test_redirector.py  test_sidebar.py  test_squeezer.py
installer/win_python/Lib/importlib/: _bootstrap.py  _bootstrap_external.py  abc.py  machinery.py  util.py
installer/win_python/Lib/importlib/resources/: _common.py
installer/win_python/Lib/json/: __init__.py  __main__.py  encoder.py  tool.py
installer/win_python/Lib/logging/: config.py  handlers.py
installer/win_python/Lib/multiprocessing/: connection.py  context.py  forkserver.py  managers.py  popen_fork.py  process.py  queues.py  reduction.py  resource_tracker.py  shared_memory.py  synchronize.py  util.py
installer/win_python/Lib/multiprocessing/dummy/: __init__.py
installer/win_python/Lib/pathlib/: __init__.py  _local.py  _os.py  types.py
installer/win_python/Lib/pydoc_data/: module_docs.py  topics.py
installer/win_python/Lib/re/: __init__.py  _compiler.py  _constants.py  _parser.py
installer/win_python/Lib/sqlite3/: __init__.py  __main__.py  dbapi2.py
installer/win_python/Lib/string/: __init__.py  templatelib.py
installer/win_python/Lib/sysconfig/: __init__.py  __main__.py
installer/win_python/Lib/tkinter/: __init__.py  scrolledtext.py  ttk.py
installer/win_python/Lib/tomllib/: _parser.py  _re.py  mypy.ini
installer/win_python/Lib/turtledemo/: __main__.py  bytedesign.py  chaos.py  clock.py  colormixer.py  forest.py  fractalcurves.py  lindenmayer.py  minimal_hanoi.py  nim.py  paint.py  peace.py  penrose.py  planet_and_moon.py  rosette.py  round_dance.py  sorting_animate.py  tree.py  two_canvases.py  yinyang.py
installer/win_python/Lib/unittest/: __init__.py  async_case.py  case.py  loader.py  main.py  mock.py  result.py  runner.py
installer/win_python/Lib/urllib/: parse.py  request.py  robotparser.py
installer/win_python/Lib/wsgiref/: handlers.py  headers.py
installer/win_python/Lib/xml/dom/: __init__.py
installer/win_python/Lib/xml/etree/: ElementTree.py
installer/win_python/Lib/xml/sax/: __init__.py  handler.py
installer/win_python/Lib/xmlrpc/: client.py  server.py
installer/win_python/Lib/zipfile/: __init__.py
installer/win_python/Lib/zipfile/_path/: __init__.py  glob.py
installer/win_python/Lib/zoneinfo/: _common.py  _zoneinfo.py
plugins/SumConfig/: sumconfig.cpp
src/core/: .Plugin_Manager.h.kate-swp  CMakeLists.txt
src/core/include/finwizard/: archivemanager.h  iconfig.h  ifinwizardcontext.h  plugincontext.h  pluginengine.h  pluginmanager.h  pluginrepository.h  version.h
src/core/src/: .pluginmanager.cpp  archivemanager.cpp  pluginengine.cpp  pluginmanager.cpp  pluginrepository.cpp
src/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  material_icons.qrc  resources.qrc
